# GasCulc

./: .gitignore  README.md  gost_31369-2008.ods  gost_8.662-2009.ods  gost_8.662-209.ods  gost_8.770_Appendix.A.ods  gost_8.770_Appendix.xlsx  gost_r_8.662_2009.ods  gost_r_8.770-2011_Appendix.B.ods  readme.txt
GasCulc/: CMakeLists.txt  Doxyfile  GasCulc.cpp  GasCulc.h  GasCulc.kdev4  agas.cpp  agas.h  component.cpp  component.h  gas.cpp  gas.h  main.cpp  param.cpp  param.h
GasCulc/ComponentData/: Ar.txt  C2H6.txt  C3H8.txt  C4H10.txt  C6H14.txt  C7H16.txt  CH4.txt  CO.txt  CO2.txt  H2.txt  H2O.txt  H2S.txt  He.txt  I-C4H10.txt  I-C5H12.txt  N-C10H22.txt  N-C4H10.txt  N-C5H12.txt  N-C6H14.txt  N-C7H16.txt  N-C8H18.txt  N-C9H20.txt  N2.txt  O2.txt  tbl_D.1.txt  tbl_D.2.txt  tbl_D.3.txt
GasCulc/Gas/: Gas.txt  Gas_01.txt
